--- a/GharPoch/src/pages/fruits-vegetables/fruits-vegetables.html
+++ b/GharPoch/src/pages/fruits-vegetables/fruits-vegetables.html
@@ -4,11 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header class="header_gradient">
+<!--<ion-header class="header_gradient">
   <ion-navbar>
     <ion-title>Fruits & Vegetables</ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header>-->
 
 
 <ion-content padding>
