--- a/GharPoch/src/pages/groceries-staples-spices/groceries-staples-spices.html
+++ b/GharPoch/src/pages/groceries-staples-spices/groceries-staples-spices.html
@@ -4,13 +4,13 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<!--<ion-header class="header_gradient">
 
   <ion-navbar>
     <ion-title>Groceries, Staples & Spices</ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header>-->
 
 
 <ion-content padding>
