--- a/GharPoch/src/pages/home/home.html
+++ b/GharPoch/src/pages/home/home.html
@@ -1,18 +1,18 @@
 <ion-content class="home_page app_bg">
    	<ion-grid class="shop-signup">
 	  <ion-row>
-	    <ion-col col-6>
+	    <ion-col>
 	    	<button text-uppercase (click)="shop();">Go Shopping</button>
 	    </ion-col>
-	    <ion-col col-6>
+	    <!--<ion-col col-6>
 	     	<button text-uppercase (click)="signup();">Sign up</button>
-	    </ion-col>
+	    </ion-col>-->
 	  </ion-row>
-	  <ion-row>	   
+	  <!--<ion-row>	   
 	    <ion-col col-12>
 	     	<button text-uppercase>New member registration</button>
 	    </ion-col>
-	  </ion-row>
+	  </ion-row>-->
 	</ion-grid>
 	<ion-row class="logo">	   
 	    <ion-col col-12>
