--- a/GharPoch/src/pages/shop/shop.html
+++ b/GharPoch/src/pages/shop/shop.html
@@ -8,15 +8,15 @@
     <ion-navbar>
     	<ion-title text-uppercase text-center>GharPoch<span class="sub-text">.com</span></ion-title>
     </ion-navbar>
-	<ion-slides class="main_slider">
+	<ion-slides class="main_slider" autoplay="2000" loop="true" speed="900">
 		<ion-slide>
-			<img src="../assets/images/slider.png">
+			<img src="assets/images/slider.png">
 		</ion-slide>
 		<ion-slide>
-			<img src="../assets/images/slider.png">
+			<img src="assets/images/slider.png">
 		</ion-slide>
 		<ion-slide>
-			<img src="../assets/images/slider.png">
+			<img src="assets/images/slider.png">
 		</ion-slide>
 	</ion-slides>
 </ion-header>
@@ -25,43 +25,43 @@
 	<ion-grid class="cat_list" text-uppercase text-center>
 	  <ion-row>
 	    <ion-col col-6>
-	    	<a href="#" (click)="categories()">
+	    	<a href="#" (click)="categories(2,'FRUITS & VEGETABLE')">
 				<p>Fruits & <br/> Vegetables</p>
-				<img src="../assets/images/fruits.png" alt="Fruits and vegetables"/>
+				<img src="assets/images/fruits.png" alt="Fruits and vegetables"/>
 			</a>
 	    </ion-col>
 	    <ion-col col-6>
-	     	<a href="#" (click)="categories()">
+	     	<a href="#" (click)="categories(3,'GROVERIES, STAPLES & SPICES')">
 				<p>Groceries, <br/>  staples & spices</p>
-				<img src="../assets/images/groceries.png" alt="Groceries staples"/>
+				<img src="assets/images/groceries.png" alt="Groceries staples"/>
 			</a>
 	    </ion-col>
 	  </ion-row>	
 	  <ion-row>
 	    <ion-col col-6>
-	    	<a href="#" (click)="categories()">
+	    	<a href="#" (click)="categories(4,'DAIRY, BAKERY & BEVERAGES')">
 				<p>Dairy, bakery <br/> & BEVERAGES</p>
-				<img src="../assets/images/dairy.png" alt="Dairy, bakery "/>
+				<img src="assets/images/dairy.png" alt="Dairy, bakery "/>
 			</a>
 	    </ion-col>
 	    <ion-col col-6>
-	     	<a href="#" (click)="categories()">
+	     	<a href="#" (click)="categories(5,'SNACKS, SPREADS & PACKED')">
 				<p>SNACKS,spREADS <br/> & PACKED</p>
-				<img src="../assets/images/snacks.png" alt="G>SNACKS spREADS "/>
+				<img src="assets/images/snacks.png" alt="G>SNACKS spREADS "/>
 			</a>
 	    </ion-col>
 	  </ion-row>	
 	  <ion-row>
 	    <ion-col col-6>
-	    	<a href="#" (click)="categories()">
+	    	<a href="#" (click)="categories(6,'HOUSEHOLD NEEDS')">
 				<p>Household <br/> needs</p>
-				<img src="../assets/images/household.png" alt="Household"/>
+				<img src="assets/images/household.png" alt="Household"/>
 			</a>
 	    </ion-col>
 	    <ion-col col-6>
-	     	<a href="#" (click)="categories()">
+	     	<a href="#" (click)="categories(7,'PERSONAL CARE')">
 				<p>Personal Care <br/> & baby care</p>
-				<img src="../assets/images/personal.png" alt="Personal Care "/>
+				<img src="assets/images/personal.png" alt="Personal Care "/>
 			</a>
 	    </ion-col>
 	  </ion-row>	 
@@ -70,7 +70,7 @@
 <ion-footer>
   <ion-toolbar>
     <ion-title text-uppercase>
-    	<button></button>
+    	<button><ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge></button>
     	<p>standard: Today, 5:00 PM TO 8:00 PM</p>
     	<p>gHARPOCH EXPRESS : bY Today, 9:00 PM</p>
     </ion-title>
