--- a/GharPoch/src/pages/shop/shop.html
+++ b/GharPoch/src/pages/shop/shop.html
@@ -10,13 +10,19 @@
     </ion-navbar>
 	<ion-slides class="main_slider" autoplay="2000" loop="true" speed="900">
 		<ion-slide>
-			<img src="assets/images/slider.png">
+			<img src="assets/images/n4.jpg">
 		</ion-slide>
 		<ion-slide>
-			<img src="assets/images/slider.png">
+			<img src="assets/images/1.jpg">
 		</ion-slide>
 		<ion-slide>
-			<img src="assets/images/slider.png">
+			<img src="assets/images/2.jpg">
+		</ion-slide>
+		<ion-slide>
+			<img src="assets/images/n3.jpg">
+		</ion-slide>
+		<ion-slide>
+			<img src="assets/images/n5.jpg">
 		</ion-slide>
 	</ion-slides>
 </ion-header>
