--- a/GharPoch/src/pages/shop/shop.html
+++ b/GharPoch/src/pages/shop/shop.html
@@ -76,7 +76,9 @@
 <ion-footer>
   <ion-toolbar>
     <ion-title text-uppercase>
-    	<button><ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge></button>
+    	<button>
+				<!--<ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge>-->
+				</button>
     	<p>standard: Today, 5:00 PM TO 8:00 PM</p>
     	<p>gHARPOCH EXPRESS : bY Today, 9:00 PM</p>
     </ion-title>
