--- a/GharPoch/src/pages/shop/shop.html
+++ b/GharPoch/src/pages/shop/shop.html
@@ -8,7 +8,7 @@
     <ion-navbar>
     	<ion-title text-uppercase text-center>GharPoch<span class="sub-text">.com</span></ion-title>
     </ion-navbar>
-	<ion-slides class="main_slider" autoplay="2000" loop="true" speed="900">
+	<ion-slides class="main_slider" autoplay="2000" loop="true" speed="1500">
 		<ion-slide>
 			<img src="assets/images/n4.jpg">
 		</ion-slide>
@@ -37,7 +37,7 @@
 			</a>
 	    </ion-col>
 	    <ion-col col-6>
-	     	<a href="#" (click)="categories(3,'GROVERIES, STAPLES & SPICES')">
+	     	<a href="#" (click)="categories(3,'GROCERIES, STAPLES & SPICES')">
 				<p>Groceries, <br/>  staples & spices</p>
 				<img src="assets/images/groceries.png" alt="Groceries staples"/>
 			</a>
@@ -77,7 +77,7 @@
   <ion-toolbar>
     <ion-title text-uppercase>
     	<button>
-				<!--<ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge>-->
+				<ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge>
 				</button>
     	<p>standard: Today, 5:00 PM TO 8:00 PM</p>
     	<p>gHARPOCH EXPRESS : bY Today, 9:00 PM</p>
