Order app UI changes

--- a/GharPoch/src/pages/all-product/all-product.html
+++ b/GharPoch/src/pages/all-product/all-product.html
@@ -48,8 +48,9 @@
   <ion-toolbar>
     <ion-title text-uppercase>
     	<button (click)="gotToCart()"><ion-badge id="notifications-badge" color="danger"> {{cartCount}}</ion-badge></button>
-    	<p>standard: Today, 5:00 PM TO 8:00 PM</p>
-    	<p>gHARPOCH EXPRESS : bY Today, 9:00 PM</p>
+    	<!--<p>standard: Today, 5:00 PM TO 8:00 PM</p>
+    	<p>gHARPOCH EXPRESS : bY Today, 9:00 PM</p>-->
+			<h5> Total: र {{total}}</h5>
     </ion-title>
   </ion-toolbar>
 </ion-footer>
