--- a/GharPoch/src/pages/home/home.html
+++ b/GharPoch/src/pages/home/home.html
@@ -16,7 +16,7 @@
 	</ion-grid>
 	<ion-row class="logo">	   
 	    <ion-col col-12>
-	     	<ion-img src="../assets/images/second_screenlogo.png">
+	     	<ion-img src="assets/images/second_screenlogo.png">
 	     	</ion-img>
 	    </ion-col>
 	</ion-row>
