1st module complete

--- a/GharPoch/src/pages/checkout/checkout.html
+++ b/GharPoch/src/pages/checkout/checkout.html
@@ -1,5 +1,5 @@
 <ion-header class="header_gradient">
-  <ion-navbar>
+  <ion-navbar hideBackButton="true">
     <ion-title text-uppercase text-center>Checkout</ion-title>
   </ion-navbar>
 </ion-header>
@@ -32,4 +32,5 @@
 	<!--<button text-uppercase text-center >Continue shopping</button>-->
 	<button class="Tack-order" (click)="gotoShop()" text-uppercase text-center>Continue shopping</button>
 </ion-content>
+
 
