--- a/GharPoch/src/pages/profile/profile.html
+++ b/GharPoch/src/pages/profile/profile.html
@@ -14,24 +14,27 @@
 <ion-content class="profile_page">
 	<h2 text-center text-uppercase>Profile</h2>
   <ion-list>
+		<!--<ion-item  class="profile-picture" text-center>
+   		<img src="../assets/images/profile-pic.png" alt="profile picture"/>
+  	</ion-item>-->
     <ion-item>
-    <ion-input placeholder="FirstName"  value="{{firstname}}" readonly></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input placeholder="LastName"  value="{{lastname}}" readonly></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input placeholder="Address"  value="{{address}}" readonly></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input placeholder="City"  value="{{city}}" readonly></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input placeholder="Number"  value="{{number}}" readonly></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-input placeholder="Email"  value="{{email}}" readonly></ion-input>
-  </ion-item>
+			<ion-input placeholder="FirstName"  value="{{firstname}}" readonly></ion-input>
+		</ion-item>
+		<ion-item>
+			<ion-input placeholder="LastName"  value="{{lastname}}" readonly></ion-input>
+		</ion-item>
+		<ion-item>
+			<ion-input placeholder="Address"  value="{{address}}" readonly></ion-input>
+		</ion-item>
+		<ion-item>
+			<ion-input placeholder="City"  value="{{city}}" readonly></ion-input>
+		</ion-item>
+		<ion-item>
+			<ion-input placeholder="Number"  value="{{number}}" readonly></ion-input>
+		</ion-item>
+		<ion-item>
+			<ion-input placeholder="Email"  value="{{email}}" readonly></ion-input>
+		</ion-item>
   </ion-list>
 	<!--<form action="" method="post">
 		<div class="form_fields">
