--- a/GharPoch/src/pages/signup/signup.html
+++ b/GharPoch/src/pages/signup/signup.html
@@ -6,55 +6,9 @@
 </ion-header>
 
 
-<!--<ion-content>
-  <h4>SIGN UP</h4>
-  <ion-item>
-    <ion-label floating>FirstName</ion-label>
-    <ion-input type="text"  [(ngModel)]="fname"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label floating>LastName</ion-label>
-    <ion-input type="text" [(ngModel)]="lname"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label floating>EmailId</ion-label>
-    <ion-input type="email" [(ngModel)]="emailId"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label floating>Set Password</ion-label>
-    <ion-input type="Password" [(ngModel)]="pass"></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label floating>Address</ion-label>
-    <ion-input type="text" [(ngModel)]="address"></ion-input>
-  </ion-item>
-
-  
-</ion-content>-->
 <ion-content class="sign_up_page">
 	<h3 text-center text-uppercase>SIGN UP</h3>
-	<!--<form action="" method="post"></form>-->
-		<!--<div class="form_fields">
-			<ion-input type="text" [(ngModel)]="fname" placeholder="First Name"></ion-input>
-			<ion-input type="text" [(ngModel)]="lname" placeholder="Last Name"></ion-input>
-			<ion-input type="text" [(ngModel)]="address" placeholder="Address"></ion-input>
-			
-       <ion-select [(ngModel)]="city">
-        <ion-option value="Sangli">Sangli</ion-option>
-        <ion-option value="Miraj">Miraj</ion-option>
-      </ion-select>
-			<ion-input type="tel" [(ngModel)]="mobile" maxlength="10" placeholder="Mobile no"></ion-input>
-			<ion-input type="email" [(ngModel)]="emailId" placeholder="Email ID"></ion-input>
-			<ion-input type="password" [(ngModel)]="password" placeholder="Set Password"></ion-input>
-		</div>-->
-		<!--<div class="form_submit_fields">
-			<input type="submit" value="Submit and make payment" text-uppercase text-center/>
-			<button text-uppercase text-center>Visit request</button>
-			<p text-center>
-				For any quarry contact us on our toll-free No. <br/> 
-				<span>1800-0000-0000</span>
-			</p>
-		</div>-->
+
     <div class="form_fields">
     <ion-item>
     <ion-label floating>First Name</ion-label>
@@ -68,9 +22,13 @@
     <ion-label floating>Email</ion-label>
     <ion-input type="email"  [(ngModel)]="email"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label floating>User Name</ion-label>
+    <ion-input type="text" [value]="email" readonly></ion-input>
+  </ion-item>
 	<ion-item>
     <ion-label floating>Mobile</ion-label>
-    <ion-input type="tel" maxlength="12" [(ngModel)]="mobile"></ion-input>
+    <ion-input type="tel" maxlength="12" max="12" [(ngModel)]="mobile"></ion-input>
   </ion-item>
 	<ion-item>
     <ion-label floating>Address</ion-label>
@@ -93,15 +51,15 @@
   </ion-item>
   <ion-item>
     <ion-label floating>PinCode</ion-label>
-    <ion-input [attr.maxlength]="7" type="tel" [(ngModel)]="zip"></ion-input>
+    <ion-input [attr.maxlength]="6" max="6" type="tel" [(ngModel)]="zip"></ion-input>
   </ion-item>
   </div>
   <div class="form_submit_fields">
 			<!--<input type="submit" value="Submit and make payment" text-uppercase text-center/>
 			<button text-uppercase text-center>Visit request</button>-->
 			<p text-center>
-				For any quarry contact us on our toll-free No. <br/> 
-				<span>1800-0000-0000</span>
+				For any quarry contact us on our No. <br/> 
+				<span>9527875656</span>
 			</p>
 		</div>
 	
